[gd_scene load_steps=17 format=3 uid="uid://d20rkomgxxlq8"]

[ext_resource type="Script" path="res://scripts/tank_1.gd" id="1_fy6a5"]
[ext_resource type="Texture2D" uid="uid://dwm57ny557t0t" path="res://icon.svg" id="2_oflka"]
[ext_resource type="Texture2D" uid="uid://rj3fumfekq3l" path="res://assets/rwcircle.png" id="3_84sov"]
[ext_resource type="Texture2D" uid="uid://c2plgu1mrvbh0" path="res://assets/wsquare.png" id="4_s3csa"]
[ext_resource type="Texture2D" uid="uid://16fgxqtcfuie" path="res://assets/heart_7.png" id="5_ul8e2"]
[ext_resource type="Texture2D" uid="uid://71hoynnnkhay" path="res://assets/BulletIcon_1.png" id="6_5xwc7"]
[ext_resource type="Texture2D" uid="uid://btwa2tfgepbrc" path="res://assets/boom.png" id="7_2mttl"]
[ext_resource type="Texture2D" uid="uid://cppy6iwrr2p0d" path="res://assets/shield.png" id="8_shx28"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_su32n"]
size = Vector2(97, 93)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ipe4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thahe"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqakg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7y2q"]
bg_color = Color(0.709804, 0.65098, 0.258824, 1)

[sub_resource type="Animation" id="Animation_sfoka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.6, 0.6)]
}

[sub_resource type="Animation" id="Animation_iqqcb"]
resource_name = "dead_anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5wgs"]
_data = {
"RESET": SubResource("Animation_sfoka"),
"dead_anim": SubResource("Animation_iqqcb")
}

[node name="tank" type="CharacterBody2D" groups=["tank"]]
script = ExtResource("1_fy6a5")

[node name="camera" type="Camera2D" parent="."]
enabled = false
limit_left = -2704
limit_top = -1378
limit_right = 2704
limit_bottom = 1378
position_smoothing_enabled = true

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("2_oflka")

[node name="indicatortemp" type="Sprite2D" parent="Base"]
position = Vector2(60, 0)
scale = Vector2(0.01625, 0.046875)
texture = ExtResource("4_s3csa")

[node name="Spinny" type="Sprite2D" parent="."]
rotation = -1.57615
scale = Vector2(0.254145, 0.25651)
texture = ExtResource("3_84sov")

[node name="Barrel" type="Sprite2D" parent="Spinny"]
position = Vector2(0, 268.995)
scale = Vector2(0.0804968, 0.543858)
texture = ExtResource("4_s3csa")

[node name="bullet_spawn_thing" type="Node2D" parent="Spinny/Barrel"]
position = Vector2(0, 465.934)
rotation = 1.5708

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_su32n")

[node name="bullet_cooldown" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="fire_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="hp" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = -96.0
offset_right = 54.0
offset_bottom = -84.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxEmpty_7ipe4")
theme_override_styles/fill = SubResource("StyleBoxFlat_thahe")
max_value = 20.0
value = 20.0
show_percentage = false

[node name="bullets" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = -81.0
offset_right = 54.0
offset_bottom = -69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxEmpty_eqakg")
theme_override_styles/fill = SubResource("StyleBoxFlat_r7y2q")
max_value = 15.0
value = 10.0
show_percentage = false

[node name="heart" type="Sprite2D" parent="."]
position = Vector2(-55, -91)
scale = Vector2(0.489583, 0.53125)
texture = ExtResource("5_ul8e2")

[node name="BulletIcon" type="Sprite2D" parent="."]
position = Vector2(-55, -72)
scale = Vector2(0.732955, 0.773573)
texture = ExtResource("6_5xwc7")

[node name="dead_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l5wgs")
}

[node name="explosion" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_2mttl")

[node name="shield" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.25098)
texture = ExtResource("8_shx28")

[connection signal="timeout" from="bullet_cooldown" to="." method="_on_bullet_cooldown_timeout"]
[connection signal="timeout" from="fire_cooldown" to="." method="_on_fire_cooldown_timeout"]
[connection signal="animation_finished" from="dead_anim" to="." method="_on_dead_anim_animation_finished"]
